--- a/NTL-MTS.Rmd
+++ b/NTL-MTS.Rmd
@@ -62,7 +62,8 @@ sd_fix <- sd_13_20 %>%
 
 skim(sd_fix) %>% as.tibble
 ```
-### Linear Regression 
+
+### Linear Regression
 
 ```{r}
 # Create a box plot for each group of 'post'
@@ -73,7 +74,11 @@ ggplot(sd_fix, aes(x = post_factor, y = ntl)) +
        title = "Distribution of Transit-related Deaths by Post-Treatment")
 ```
 
-We can observe that nightime lights present different distributions before and after the treatment. On that regard, the mean and median of nighttime Lights is higher in the post treatment group hinting a correlation between the introduction of mastransportation systems to the Santo Domingo city and economic output. 
+We can observe that nightime lights present different distributions
+before and after the treatment. On that regard, the mean and median of
+nighttime Lights is higher in the post treatment group hinting a
+correlation between the introduction of mastransportation systems to the
+Santo Domingo city and economic output.
 
 ```{r}
 # Definition of the regression models
@@ -106,8 +111,9 @@ ggplot(data = data.frame(residual_4)) +
   geom_hline(yintercept = 0, linetype = "dashed", color = "red") +
   labs(x = "Observation", y = "Residuals", title = "Residual Plot for NTL Model")
 ```
-there are no visible patterns on the residuals of the regression indicating that there is no heteroschedasticity on our dataset. 
 
+there are no visible patterns on the residuals of the regression
+indicating that there is no heteroschedasticity on our dataset.
 
 ```{r}
 # Regression table - includes the 4 regression models
@@ -127,10 +133,11 @@ stargazer(model_1, model_2, model_3, model_4,
                     "Social Insecurity = Count of homicides cases"))
 ```
 
-In the table we can observe that the post dummy variable indicating the introduction of the mass transportation system have big and statistical significance in all 4 models. 
+In the table we can observe that the post dummy variable indicating the
+introduction of the mass transportation system have big and statistical
+significance in all 4 models.
 
-
-### Difference in Differences 
+### Difference in Differences
 
 ```{r}
 # 2013 - 2020 period is choosen due to data availability 
@@ -192,12 +199,13 @@ xlab("Year") +
   theme_minimal()
 ```
 
-```{r}
-combined_data <- bind_rows(sd_did, stgo_did)
-```
+In the grapgh we can observe an increase in NTL in Santo Domingo after
+the instroduction of the MTS in 2018
 
 ```{r}
-combined_data
+# Combine the data for Satiago and Santo Domingo in 1 dataset 
+
+combined_data <- bind_rows(sd_did, stgo_did)
 ```
 
 ```{r}
@@ -205,28 +213,30 @@ skim(combined_data)
 ```
 
 ```{r}
+# Definition of the DID models were te interaction term treat*post gives us the DID coefficient
+
 model_did = lm(ntl ~ treat + post + treat * post, data = combined_data)
 model_did_2 = lm(ntl ~ treat + post + medical_pop + death_pop + homicide_pop + treat * post, data = combined_data)
 ```
 
 ```{r}
+# Regression table 
 
 stargazer(model_did, model_did_2, type = "text")
 ```
 
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or
-by pressing *Cmd+Option+I*.
+We can observe that the interaction term TreatTRUE:Post holds a big an
+significant effect on NTL indicating the causal impact of the
+introduction of the MTS to the NTL of Santo Domingo city
 
-When you save the notebook, an HTML file containing the code and output
-will be saved alongside it (click the *Preview* button or press
-*Cmd+Shift+K* to preview the HTML file).
-
-The preview shows you a rendered HTML copy of the contents of the
-editor. Consequently, unlike *Knit*, *Preview* does not run any R code
-chunks. Instead, the output of the chunk when it was last run in the
-editor is displayed.
+### 2 Staged DID
 
 ```{r}
+
+# Create variable "treat" to indicate if it is the treatment or control group (used with did library)
+# Craate variable "id" to indicate if it is the treatment or control group (used with fixest and did2s libraries)
+# Scale variables bt population to make them comparable
+
 sd_did2 <- sd_fix %>% mutate(
     treat = TRUE,
     id = 1,
@@ -251,6 +261,8 @@ stgo_did2 <- stgo_fix %>% mutate(
 ```
 
 ```{r}
+# Combine the data for Satiago and Santo Domingo in 1 dataset 
+
 data_did2 <- bind_rows(sd_did2, stgo_did2) 
 ```
 
@@ -260,6 +272,7 @@ data_did2
 
 ```{r}
 # did2s - Gardner 2021 - paper Two-stage differences in differences
+
 es_mod = did2s(
   data         = data_did2,
   yname        = "ntl", 
@@ -284,10 +297,22 @@ es_mod |>
   )
 ```
 
+The model based on Gardner (2021) does not shows an effect on NTL after
+the introduction of the MTS to the NTL of Santo Domingo city. Indicating
+no Causal effect between the two variables. After testing with other
+methodologies in the appendix all of them shown trouble when handling
+the data due to the small size of the sample. it is possible that this
+insignificant result is also caused due to this data limitation. Further
+analysis of the data is needed to guarantee the robustness checks.
+
+### Appendix
+
 ```{r}
 skim(data_did2)
 
 ```
+
+#### Callaway and Sant’Anna 2021
 
 ```{r}
 # did - Callaway and Sant’Anna 2021 -  paper Difference-in-Differences with multiple time periods
@@ -319,6 +344,10 @@ atts <- att_gt(yname = "ntl", # LHS variable
                panel = TRUE) # whether the data is panel or repeated cross-sectional
 ```
 
+Does not run because the groups are too small
+
+#### Sun and Abraham 2020
+
 ```{r}
 # fixest - Sun and Abraham 2020 - paper Estimating Dynamic Treatment Effects in Event Studies with Heterogeneous Treatment Effects
 sa20 = feols(
@@ -328,6 +357,4 @@ sa20 = feols(
 sa20
 ```
 
-\`\`\`{r} sa20 \|\> iplot( main = "fixest::sunab", xlab = "Time to
-treatment", drop = "[[:digit:]]{2}", \# Limit lead and lag periods to
--9:9 ref.line = 1 )
+(Standar errors are non finite)
